--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<div class="md:w-1/2 grid md:grid-cols-2 grid-cols-1">
 						<div class="flex flex-col p-4 items-center">
 							<img
-								src="/asset/images/first.jpg"
+								src="./asset/images/first.jpg"
 								alt=""
 								class="w-[90%] h-64 2"
 							/>
@@ -172,7 +172,7 @@
 							class="flex flex-col p-4 items-center border-e-4 border-e-skin-head border-b-4 border-b-skin-head"
 						>
 							<img
-								src="/asset/images/second.jpg"
+								src="./asset/images/second.jpg"
 								alt=""
 								class="w-[90%] h-64 pb-2"
 							/>
@@ -385,17 +385,17 @@
 					</div>
 					<div class="grid grid-cols-1 md:grid-cols-3 gap-5">
 						<img
-							src="/asset/images/projects1.jpg"
+							src="./asset/images/projects1.jpg"
 							alt=""
 							class="w-[100%] h-56 drop-shadow-md"
 						/>
 						<img
-							src="/asset/images/projects2.jpg"
+							src="./asset/images/projects2.jpg"
 							alt=""
 							class="w-[100%] h-56 drop-shadow-md"
 						/>
 						<img
-							src="/asset/images/projects3.jpg"
+							src="./asset/images/projects3.jpg"
 							alt=""
 							class="w-[100%] h-56 drop-shadow-md"
 						/>
